--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "FlameFace#0570",
+  "author": "İtalyan#0142",
   "license": "ISC",
   "description": ""
 }
